Fix sign up choices and clean up the homepage

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -38,11 +38,8 @@
         </div>
         <div id="s1" class="box-sign-buttons">
             <button id="hb1" onclick="location.href='/login'">Sign in</button>
-            <button id="hb2" onclick="location.href='/admin/register'">Admin sign up</button>
             <a th:href="@{/signup-choice}" style="text-decoration: none;">
-                <button id="hb3">Sign in choice</button>
-            </a>
-            <button id="hb4" onclick="location.href='/recruiter/register'">Recruiter sign up</button>
+                <button id="hb3">Sign up</button>
             <button id="hb6" onclick="location.href='/profile'">
                 <img id="person-fill" src="/images/person_fill.png" alt="Profile" style="width: 25px; height: 26px;">
             </button>
