--- a/src/main/resources/static/InternMapHomepage.css
+++ b/src/main/resources/static/InternMapHomepage.css
@@ -1,11 +1,17 @@
 header {
 
+
     #h1 {
         display: flex;
         flex-direction: row;
         padding: 20px;
         justify-content: space-between;
         align-items: center;
+
+        .box-sign-buttons {
+            margin-right: 15px;
+            margin-left: auto;
+        }
 
         #T1 {
             color: #000;
@@ -17,9 +23,7 @@ header {
         }
 
         #s1 {
-            gap: 10px;
             display: flex;
-
 
             #hb1, #hb2, #hb3, #hb4, #hb5 {
                 padding: 10px 20px;
