--- a/src/main/resources/static/InternMapSignUpchoice.css
+++ b/src/main/resources/static/InternMapSignUpchoice.css
@@ -1,91 +1,108 @@
-header{
-#logo{
- display: flex;
-margin: 0 auto;
-width: 162px;
-height: 162px;
-aspect-ratio: 1/1;
+header {
+    #logo {
+        display: flex;
+        margin: 0 auto;
+        width: 162px;
+        height: 162px;
+        aspect-ratio: 1/1;
+    }
+
+
+    #b1 {
+        margin-left: auto;
+        margin-top: 20px;
+        margin-right: 20px;
+        display: flex;
+        padding: 10px 20px;
+        border-radius: 34px;
+        border: none;
+        cursor: pointer;
+        text-align: center;
+        font-size: max(14px, 1vw);
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+        background: #1883fd;
+        color: #ffffff;
+    }
 }
 
+body {
 
+    .vertical-container {
+        display: flex;
+        gap: 40%;
+        flex-direction: column;
+        align-items: center;
+        aspect-ratio: 1/1;
+    }
 
-    
+    .flex-button {
+        box-shadow: 1px 4px 50px 0 rgba(0, 0, 0, 0.20);
+        margin-top: 20px;
+        font-size: 25px;
+        width: 220px;
+        height: 220px;
+        aspect-ratio: 1/1;
+        border-radius: 40px;
+        border: none;
+        background: #fdfdfd;
+    }
 
+    .flex-button:hover {
+        border: 8px solid #000;
+        animation: pulse 1s infinite;
+    }
 
-
-
-
-#b1{
-margin-left: auto; 
-display: flex;
-width: 120px;
-padding: 9px 31px;
-justify-content: center;
-align-items: center;
-gap: 14px;
-border-radius: 34px; 
-border-color: transparent;
-background: #2391FF;
-color: #FFF;
-text-align: center;
-font-family: Inter;
-font-size: 16px;
-font-style: normal;
-font-weight: 700;
-line-height: normal;
+    #p1 {
+        padding-top: 50px;
+        padding-bottom: 15px;
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        gap: 15px;
+        align-self: stretch;
+        font-size: 36px;
+        font-style: normal;
+        font-weight: 700;
+        line-height: normal;
+    }
 }
-}
 
-body{
-    #p1{    
-padding-bottom: 15px;
-    display: flex;
-justify-content: center;
-align-items: center;
-gap: 15px;
-align-self: stretch;  
-color: rgba(ffffff);
-font-family: Inter;
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: normal; 
-}
-}
-footer{
+footer {
     position: absolute;
-    right: 0;
     bottom: 0;
-    left: 0;
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
 
-.box{
-    display: flex;
-    width: auto;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    justify-content: space-around;
-    gap: 1500px;
-    padding-bottom: 30px;
-    
-}
+    .box {
+        display: flex;
+        width: auto;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        padding-bottom: 30px;
 
-.box-item{
-    color: #2391FF;
-    font-family: Inter;
-    font-size: 40px;
-    font-style: normal;
-    font-weight: 800;
-    line-height: normal;
-}
+    }
 
-a{
-    color: rgb(0, 0, 0);
-    font-family: Inter;
-    font-size: 20px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    text-decoration: none;
-}
+    .box-item {
+        color: #2391FF;
+        font-size: 40px;
+        font-style: normal;
+        font-weight: 800;
+        line-height: normal;
+    }
+
+    #home-hot-link {
+        color: rgb(0, 0, 0);
+        font-size: 20px;
+        background: transparent;
+        border: none;
+        padding-top: 20px;
+        font-style: normal;
+        font-weight: 600;
+        line-height: normal;
+        text-decoration: none;
+    }
 }
