--- a/src/main/resources/templates/InternMapSignUpchoice.html
+++ b/src/main/resources/templates/InternMapSignUpchoice.html
@@ -6,14 +6,12 @@
     <link rel="icon" type="image/png" href="/images/Logo Glass.png">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" th:href="@{/InternMapSignUpchoice.css}">
+    <link rel="stylesheet" href="InternMapSignUpchoice.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
@@ -47,56 +45,62 @@
             border-width: 5px;
         }
 
-        #b2 {
-            width: 200px;
-            height: 65px;
-            padding: 9px 31px;
-            border-radius: 34px;
-            background: #2391FF;
-            color: #FFF;
-            font-size: 26px;
-            font-weight: 700;
-            border: none;
-        }
-
-        #b2:hover {
-            cursor: pointer;
-            background-color: #1A73E8;
-        }
     </style>
 
 </head>
 
 <header>
     <button id="b1">
-        <a th:href="@{/signin}" style="text-decoration: none; color: #FFF;">Sign In</a>
+        <a th:href="@{/login}" style="text-decoration: none; color: #FFF;">Sign In</a>
     </button>
-    <img id="logo" th:src="@{/images/Logo Glass.png}" alt="Logo">
+
+    <img id="logo" src="/images/Logo Glass.png" alt="Logo">
 </header>
 
 <body>
 
-    <div id="p1">Sign Up as?</div>
+<div id="p1">Sign Up as...</div>
+
+<div class="flex-button-container">
 
     <div class="flex-button-container">
+        <a th:href="@{/admin/register}" style="text-decoration: none; color: black;">
+            <div class="flex-button">
+                <div class="vertical-container">
+                    <img src="/images/server_rack.png" height="60" width="77" alt="Server Rack" style="margin-top: 15px;"/>
+                    <a style="margin-top: 14px">Admin</a>
+                </div>
+            </div>
+        </a>
 
-      <div class="flex-button-container">
-            <a th:href="@{/student/register}" style="text-decoration: none; color: black;">     <div class = "flex-button">  Student </div></a>
-          
-            <a th:href="@{/recruiter/register}" style="text-decoration: none; color: black;"><div class = "flex-button">Recruiter</div></a>
-          
-          <a th:href="@{/admin/register}" style="text-decoration: none; color: black;"><div class = "flex-button"> Admin </div></a>
-        </div>
-        <br>
+        <a th:href="@{/student/register}" style="text-decoration: none; color: black; z-index: 10">
+            <div class="flex-button">
+                <div class="vertical-container">
+                    <img src="/images/Graduation_cap.png" height="81" width="76.87" alt="Graduation Cap"/>
+                    Student
+                </div>
+            </div>
+        </a>
+
+        <a th:href="@{/recruiter/register}" style="text-decoration: none; color: black;">
+            <div class="flex-button">
+                <div class="vertical-container">
+                    <img src="/images/Suitcase.png" height="63" width="75" alt="Suitcase" style="margin-top: 12px;"/>
+                    Recruiter
+                </div>
+            </div>
+        </a>
     </div>
-
-
+    <br>
+</div>
 </body>
 
 <footer>
     <div class="box">
         <div class="box-item">InternMap</div>
-        <div><a th:href="@{/}">Home</a></div>
+        <div>
+            <button id="home-hot-link" th:href="@{/}">Home</button>
+        </div>
     </div>
 </footer>
 
