--- a/src/main/resources/templates/RecruiterRegister.html
+++ b/src/main/resources/templates/RecruiterRegister.html
@@ -75,8 +75,13 @@
                    required />
         </div>
 
-    <label for="title">Your Title:</label>
-    <input id="title" type="text" th:field="*{user.title}" />
+        <div class="form-group">
+            <input type="password"
+                   class="form-input"
+                   th:field="*{user.title}"
+                   placeholder="title"
+                   required />
+        </div>
 
     <hr />
 
@@ -84,18 +89,25 @@
         Company (If your company already exists, enter the exact name.
         If not, you will be redirected to register it.)
     </p>
-
-    <label for="company_name">Company Name:</label>
-    <input id="company_name" type="text" th:field="*{company.name}" />
-
-    <button type="submit">Register</button>
+        <div class="form-group">
+            <input type="password"
+                   class="form-input"
+                   th:field="*{company.name}"
+                   placeholder="company name"
+                    >
+        </div>
+    </div>
+    <button type="submit" class="form-submit">Register</button>
 </form>
 
-<p>If your company doesn't exist, you can
-    <a th:href="@{/company/register}">create a company</a> first.
-</p>
+    <p class="form-link">
+        If your company doesn't exist, you can
+        <a th:href="@{/company/register}">create a company</a>
+    </p>
+    <p class="form-link">
+        <a th:href="@{/login}">Already have an account?</a>
+    </p>
 
-<a th:href="@{/login}">Already have an account?</a>
-
+</div>
 </body>
 </html>
