--- a/src/main/resources/templates/InternMapSignUp.html
+++ b/src/main/resources/templates/InternMapSignUp.html
@@ -36,9 +36,5 @@
     </div>
     </main>
 
-    <footer>
-        <div id="footer" class="box">
-            InternMap
-        </div>
-    </footer>
+    <div th:replace="~{fragments/footer}"></div>
 </div>
