--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,22 +33,22 @@
 <!--        </nav>-->
 <!--    </div>-->
     <div id="h1">
-        <div id="T1" class="box">
+        <div id="T1" class="box" onclick="location.href = '/'" style="cursor: pointer">
             InternMap
         </div>
         <div id="s1" class="box-sign-buttons">
             <button id="hb1" onclick="location.href='/login'">Sign in</button>
-            <a th:href="@{/signup-choice}" style="text-decoration: none;">
-                <button id="hb3">Sign up</button>
+            <a th:href="@{/signup-choice}" style="text-decoration: none;"></a>
+                <button id="hb3" onclick="location.href='/signup-choice'">Sign up</button>
             <button id="hb6" onclick="location.href='/profile'">
-                <img id="person-fill" src="/images/person_fill.png" alt="Profile" style="width: 25px; height: 26px;">
+                <img id="person-fill" src="/images/person_fill.png" alt="Profile" style="width: 25px; height: 26px; margin-left: 10px;">
             </button>
 
         </div>
     </div>
 
     <div id="l1">
-        <img id="logo" src="/images/Logo Glass.png" alt="This didn't load successfuly >:(">
+        <img id="logo" src="/images/Logo Glass.png" alt="This didn't load successfuly >:(" onclick="location.href = '/';" style="cursor: pointer">
         <span id="p1">InternMap</span>
         <span id="p2">Welcome to the platform that sets your future for you</span>
     </div>
