--- a/src/main/resources/templates/ViewApplicationDetail.html
+++ b/src/main/resources/templates/ViewApplicationDetail.html
@@ -602,10 +602,10 @@
                     </li>
                     <li>
                         <strong>CV:</strong>
-                        <span th:if="${app.cv != null}">
+                        <span th:if="${app.CV != null}">
                             <a href="#" class="cv-link">View CV</a>
                         </span>
-                        <span th:unless="${app.cv != null}">Not provided</span>
+                        <span th:unless="${app.CV != null}">Not provided</span>
                     </li>
                 </ul>
             </div>
