--- a/src/main/resources/static/InternMapSignIn.css
+++ b/src/main/resources/static/InternMapSignIn.css
@@ -770,6 +770,8 @@ body {
 }
 
 .header-nav {
+    margin-left: auto;
+    margin-right: 20px;
     gap: 10px;
     display: flex;
     flex-wrap: wrap;
@@ -818,13 +820,12 @@ body {
 .header-hero {
     display: flex;
     flex-direction: column;
-    padding-top: 10px;
+    margin-top: -20px;
     align-items: center;
 }
 
 .logo {
     display: flex;
-    margin: 0 auto;
     width: 162px;
     height: 162px;
     aspect-ratio: 1/1;
@@ -923,7 +924,6 @@ body {
     flex-direction: column;
     align-items: center;
 
-    gap: 60px;
     border-radius: 60px;
     background: #FCFCFC;
     box-shadow: 0 0 120px -6px rgba(0, 0, 0, 0.25);
@@ -931,7 +931,7 @@ body {
 
 /* Form Title */
 .form-title {
-    margin-top: 10px;
+    margin-top: -10px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -972,7 +972,7 @@ body {
     border: 2px solid transparent;
     width: 100%;
     max-width: 750px;
-    padding: 20px 25px;
+    padding: 20px 20px;
     border-radius: 35px;
     background: #FFF;
     box-shadow: 0 1px 40px rgba(198, 198, 198, 0.10);
@@ -1002,6 +1002,7 @@ body {
     margin-top: 35px;
     margin-left: auto;
     margin-right: auto;
+    margin-bottom: 20px;
     border: none;
     display: flex;
     width: auto;
@@ -1360,7 +1361,7 @@ footer {
 .gap-3 { gap: 30px; }
 
 .container {
-    max-width: 1200px;
+    max-width: 100px;
     margin: 0 auto;
     padding: 0 20px;
 }
@@ -1393,16 +1394,12 @@ footer {
 @media (max-width: 768px) {
     .header-top {
         flex-direction: column;
-        gap: 15px;
+        gap: 10px;
     }
 
     .header-nav {
         flex-wrap: wrap;
-        justify-content: center;
-    }
-
-    .header-hero {
-        padding: 10px;
+        justify-content: flex-end;
     }
 
     .logo {
