--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -61,7 +61,7 @@
         <a th:href="@{/signup-choice}">Sign up</a>
     </p>
 </div>
-<div th:replace="~{fragments/footer}"></div>
+<div th:replace="~{fragments/footer}" style="position: absolute"></div>
 </body>
 
 </html>
