--- a/src/main/resources/static/InternMapSignUpchoice.css
+++ b/src/main/resources/static/InternMapSignUpchoice.css
@@ -1,5 +1,10 @@
-body {
+html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
 
+body {
     background-color: #FBFBFB;
 
     .vertical-container {
@@ -43,9 +48,8 @@ body {
 }
 
 footer {
-    position: page;
-    padding-left: 40px;
-    padding-right: 40px;
+
+    position: relative;
 
     .box {
         display: flex;
